--- a/frontend/src/features/envelope/addressBook/presentation/SenderListPanel.module.scss
+++ b/frontend/src/features/envelope/addressBook/presentation/SenderListPanel.module.scss
@@ -101,12 +101,15 @@
   &:focus {
     outline: none;
   }
+
+  > [role='option']:has(+ [data-favorites-group-end]) > :first-child {
+    margin-bottom: 0;
+  }
 }
 
 .favoritesSeparator {
-  min-height: 0.25rem;
-  margin-bottom: 0.25rem;
   flex-shrink: 0;
+  min-height: 0.5rem;
 }
 
 .listEmpty {
